Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49681

Qt 5.6 regression: ASSERT: "!(mm_data & MarkBit)"

    XMLWordPrintable

Details

    Description

      #6  0x00007ffff63299de in qt_assert (assertion=assertion@entry=0x7ffff7243f6b "!(mm_data & MarkBit)", 
          file=file@entry=0x7ffff7237f70 "../../include/QtQml/5.6.0/QtQml/private/../../../../../../../../../sources/qt/qt5/qtdeclarative/src/qml/memory/qv4heap_p.h", line=line@entry=86)
          at /data/sources/qt/qt5/qtbase/src/corelib/global/qglobal.cpp:3044
      #7  0x00007ffff70d9d45 in QV4::Heap::Base::setVtable (v=<optimized out>, this=0x7fffffffd2c0)
          at ../../include/QtQml/5.6.0/QtQml/private/../../../../../../../../../sources/qt/qt5/qtdeclarative/src/qml/memory/qv4heap_p.h:86
      #8  QV4::SimpleScriptFunction::call (that=0x7fffe8521248, callData=0x7fffe87c0320) at /data/sources/qt/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:567
      #9  0x00007ffff71c6cde in QV4::Object::call (d=0x7fffe87c0320, this=0x7fffe8521248)
          at ../../include/QtQml/5.6.0/QtQml/private/../../../../../../../../../sources/qt/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:324
      #10 QQmlJavaScriptExpression::evaluate (this=this@entry=0xb0d060, callData=callData@entry=0x7fffe87c0320, isUndefined=isUndefined@entry=0x7fffffffd4b0)
          at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:189
      #11 0x00007ffff71c74c1 in QQmlJavaScriptExpression::evaluate (this=this@entry=0xb0d060, isUndefined=isUndefined@entry=0x7fffffffd4b0)
          at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:149
      #12 0x00007ffff71cf86a in QQmlBinding::update (this=0xb0d060, flags=...) at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmlbinding.cpp:187
      #13 0x00007ffff71d96b8 in QQmlObjectCreator::finalize (this=0x9c0230, interrupt=...) at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1191
      #14 0x00007ffff7163052 in QQmlComponentPrivate::complete (enginePriv=0x7f9f50, state=0x9c9c90) at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:912
      #15 0x00007ffff7163109 in QQmlComponentPrivate::completeCreate (this=0x9c9bf0) at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:948
      #16 0x00007ffff7162fc0 in QQmlComponent::create (this=0xafeb60, context=0x8b46b0) at /data/sources/qt/qt5/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:774
      #17 0x0000000000472b00 in QuickView::createStyleComponent() ()
      #18 0x00000000004718f4 in QuickView::QuickView(Kernel*) ()
      #19 0x0000000000474574 in main ()
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            iamsergio Sergio Martins
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes